--- a/GoingOutApp/css/main.css
+++ b/GoingOutApp/css/main.css
@@ -16,8 +16,23 @@
 #navbar li a { display: block; padding: 0 15px; color: #fff; text-decoration: none; }
 #navbar li a:hover { color: #a3f1d7; }
 #navbar li ul { opacity: 0; position: absolute; left: 0; width: 8em; background: #63867f; list-style-type: none; padding: 0; margin: 0; }
-#navbar li:hover ul { opacity: 1; }
 #navbar li ul li { float: none; position: static; height: 0; line-height: 0; background: none; }
-#navbar li:hover ul li { height: 30px; line-height: 30px; }
 #navbar li ul li a { background: #63867f; }
-#navbar li ul li a:hover { background: #5a8078; }
+
+footer {
+    width: 960px;
+    margin: auto;
+}
+.createbtn {
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #ff0000;
+  padding: 10px 15px 10px 15px;
+  text-decoration: none;
+  vertical-align: central;
+}
+
+.createbtn:hover {
+  text-decoration: none;
+}
